opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_shell"
bug-reports: "https://github.com/janestreet/async_shell/issues"
dev-repo: "git+https://github.com/janestreet/async_shell.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "async_shell" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "core"
  "core_extended"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Shell helpers for Async
"
