opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_shell"
bug-reports: "https://github.com/janestreet/async_shell/issues"
dev-repo: "git+https://github.com/janestreet/async_shell.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_shell/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "async"
  "core"
  "ppx_jane"
  "shell"
  "dune"     {build & >= "1.5.1"}
]
synopsis: "Shell helpers for Async"
description: "
"
